--- a/settings.ini
+++ b/settings.ini
@@ -1,12 +1,12 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 lib_name = nbdev_template
-user = fastai
-# description = A description of your project
+user = hassan
+description = NBDev example
 # keywords = some keywords
-# author = Your Name
-# author_email = email@example.com
-# copyright = Your Name or Company Name
+author = Hassan Elhabbak
+author_email = hhappak@gmail.com
+copyright = Hassan
 branch = master
 version = 0.0.1
 min_python = 3.6
